--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -30,12 +30,12 @@
             </a>
           </ul>
         </nav>
-        <div class="social-section">
-          <h2>latest tweets</h2>
-          <button type="button" name="button">join the conversation</button>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia in obcaecati repellat, ratione distinctio atque facilis cum perferendis delectus ipsa voluptatem quidem illo minima.</p>
-        </div>
       </header>
+      <aside class="social-section">
+        <h2>latest tweets</h2>
+        <button type="button" name="button">join the conversation</button>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia in obcaecati repellat, ratione distinctio atque facilis cum perferendis delectus ipsa voluptatem quidem illo minima.</p>
+      </aside>
 
       <article>
         <section class="article-header">
@@ -51,12 +51,87 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum incidunt cum architecto atque commodi id dignissimos, iusto tempore voluptatibus. Aut magni culpa temporibus ex adipisci amet velit nesciunt asperiores, voluptates.</p>
           <h5>full section <a href="">here</a></h5>
         </section>
+        <p>image via <a href="">source</a></p>
         <section class="article-footer">
-
+          <div class="section">
+            <i class="fas fa-user"></i>
+            <a href="#">julie sanders</a>
+          </div>
+          <div class="section">
+            <i class="fas fa-comments"></i>
+            <a href="">leave a comment</a>
+          </div>
+          <div class="section">
+            <i class="fas fa-tags"></i>
+            <a href="">cook</a>
+          </div>
         </section>
       </article>
+
+      <div class="section">
+        <i class="fab fa-connectdevelop"></i>
+        <a href="">subscribe via abc </a>
+        <i class="fas fa-question"></i>
+
+        <ul>
+          <li>categories
+            <ul>
+              <a href="">
+                <li>cook</li>
+              </a>
+              <a href="">
+                <li>dine</li>
+              </a>
+              <a href="">
+                <li>events</li>
+              </a>
+              <a href="">
+                <li>know</li>
+              </a>
+            </ul>
+          </li>
+          <input type="text" name="search" placeholder="search">
+          <input type="submit" name="search" value="go">
+
+          <li>archives
+            <ul>
+              <a href="">
+                <li>may 2022</li>
+              </a>
+              <a href="">
+                <li>jun 2013</li>
+              </a>
+              <a href="">
+                <li>mar 31</li>
+              </a>
+              <a href="">
+                <li>jan 2012</li>
+              </a>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
     <footer>
+      <ul>
+        <a href="">
+          <li>privacy policy</li>
+        </a>
+        |
+        <a href="">
+          <li>terms of use</li>
+        </a>
+        |
+        <a href="">
+          <li>contact</li>
+        </a>
+      </ul>
+      <p>&copy copyright 2018</p>
+      <div class="social-icons">
+        <i class="fas fa-tags"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
 
     </footer>
 
