--- a/pagina1/index.html
+++ b/pagina1/index.html
@@ -68,7 +68,7 @@
         </aside>
       </section>
 
-      <section>
+      <section class="article-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima, est repellat quos sapiente non, magnam deleniti enim reiciendis unde voluptate sunt. Repellendus
           accusamus quasi iure praesentium vel, dolore molestias! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt alias, earum, odio possimus autem omnis fugit illo
           aperiam cupiditate enim sit eaque in totam reiciendis culpa vitae voluptas. Nostrum, facilis.</p>
@@ -82,15 +82,15 @@
         <h2>anuncios</h2>
 
         <section class="add-section">
-          <img src="" alt="">
+          <img src="public/img/publicidad1.jpg" alt="">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
         </section>
         <section class="add-section">
-          <img src="" alt="">
+          <img src="public/img/publicidad2.jpg" alt="">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius non ea eaque!</h4>
         </section>
         <section class="add-section">
-          <img src="" alt="">
+          <img src="public/img/publicidad3.jpg" alt="">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis assumenda, consequatur!</h4>
         </section>
       </aside>
