--- a/pagina1/index.html
+++ b/pagina1/index.html
@@ -82,15 +82,15 @@
         <h2>anuncios</h2>
 
         <section class="add-section">
-          <img src="public/img/publicidad1.jpg" alt="">
+          <img src="public/img/publicidad1.jpg" alt="publicidad">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
         </section>
         <section class="add-section">
-          <img src="public/img/publicidad2.jpg" alt="">
+          <img src="public/img/publicidad2.jpg" alt="publicidad">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius non ea eaque!</h4>
         </section>
         <section class="add-section">
-          <img src="public/img/publicidad3.jpg" alt="">
+          <img src="public/img/publicidad3.jpg" alt="publicidad">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis assumenda, consequatur!</h4>
         </section>
       </aside>
