--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>document</title>
+    <title>pagina 2</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   </head>
   <body>
     <div class="big-wrapper">
       <header>
         <div class="logo">
-          <img src="public/img/food-logo.jpg" alt="">
+          <img src="public/img/food-logo.jpg" alt="food logo">
         </div>
         <nav class="nav-bar">
           <ul>
@@ -44,7 +44,7 @@
         </section>
         <section class="article-body">
           <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus porro nostrum ducimus, facere odit iure asperiores! Distinctio ea facere voluptates, ut adipisci excepturi in iure sapiente explicabo aperiam unde dolore.</h4>
-          <img src="public/img/flower-photo.jpg" alt="">
+          <img src="public/img/flower-photo.jpg" alt="flores">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, officiis, ut! Sed neque placeat harum accusantium quas obcaecati cumque laboriosam pariatur. Distinctio tenetur beatae at unde, saepe autem quia quo?
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum consequuntur debitis a laudantium qui minima maiores, excepturi molestiae odit eligendi inventore, ratione magnam neque quaerat in dolorum consequatur. Inventore, quod.
           </p>
