--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -34,6 +34,7 @@
       <aside class="social-section">
         <h2>latest tweets</h2>
         <button type="button" name="button">join the conversation</button>
+        <h3>Lorem ipsum dolor.</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia in obcaecati repellat, ratione distinctio atque facilis cum perferendis delectus ipsa voluptatem quidem illo minima.</p>
       </aside>
 
